@@ -4,10 +4,8 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.Setter;
-import org.jetbrains.annotations.NotNull;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.oauth2.jwt.Jwt;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 import uk.gov.hmcts.reform.roleassignment.data.ActorCacheEntity;
 import uk.gov.hmcts.reform.roleassignment.data.HistoryEntity;
@@ -34,7 +32,6 @@ import uk.gov.hmcts.reform.roleassignment.domain.model.enums.Status;
 import uk.gov.hmcts.reform.roleassignment.util.JacksonUtils;
 
 import static java.time.LocalDateTime.now;
-import static org.springframework.security.oauth2.core.endpoint.OAuth2ParameterNames.ACCESS_TOKEN;
 import static uk.gov.hmcts.reform.roleassignment.domain.model.enums.Status.CREATE_REQUESTED;
 import static uk.gov.hmcts.reform.roleassignment.util.JacksonUtils.convertValueJsonNode;
 
@@ -48,15 +45,14 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.UUID;
 
 @Setter
 public class TestDataBuilder {
 
+    public static final String ACTORID = "4772dc44-268f-4d0c-8f83-f0fb662aac84";
     private TestDataBuilder() {
         //not meant to be instantiated.
     }
@@ -76,7 +72,7 @@ public class TestDataBuilder {
     public static Request buildRequest(Status status, Boolean replaceExisting) {
         return Request.builder()
             .id(UUID.fromString("ab4e8c21-27a0-4abd-aed8-810fdce22adb"))
-            .authenticatedUserId("4772dc44-268f-4d0c-8f83-f0fb662aac84")
+            .authenticatedUserId(ACTORID)
             .correlationId("38a90097-434e-47ee-8ea1-9ea2a267f51d")
             .assignerId("123e4567-e89b-42d3-a456-556642445678")
             .requestType(RequestType.CREATE)
@@ -90,8 +86,7 @@ public class TestDataBuilder {
     }
 
     public static RoleAssignment buildRoleAssignment_CustomActorId(Status status, String actorId, String path,
-                                                                   RoleType roleType, String roleName)
-        throws IOException {
+                                                                   RoleType roleType, String roleName) {
         ZonedDateTime timeStamp = ZonedDateTime.now();
         return RoleAssignment.builder()
             .id(UUID.fromString("3ed4f960-e50b-4127-af30-47821d5799f7"))
@@ -116,24 +111,21 @@ public class TestDataBuilder {
     }
 
     public static List<RoleAssignment> buildRoleAssignmentList_Custom(Status status, String actorId, String path,
-                                                                      RoleType roleType, String roleName)
-        throws IOException {
+                                                                      RoleType roleType, String roleName) {
         List<RoleAssignment> requestedRoles = new ArrayList<>();
         requestedRoles.add(buildRoleAssignment_CustomActorId(status, actorId, path, roleType, roleName));
         return requestedRoles;
     }
 
     public static List<Assignment> buildAssignmentList(Status status, String actorId, String path, RoleType roleType,
-                                                       String roleName)
-        throws IOException {
+                                                       String roleName) {
         List<Assignment> requestedRoles = new ArrayList<>();
         requestedRoles.add(buildRoleAssignment_CustomActorId(status, actorId, path, roleType, roleName));
         return requestedRoles;
     }
 
     public static List<Assignment> buildMultiAssignmentList(Status status, String actorId, String path,
-                                                            RoleType roleType, String roleName)
-        throws IOException {
+                                                            RoleType roleType, String roleName) {
         List<Assignment> requestedRoles = new ArrayList<>();
         requestedRoles.add(buildRoleAssignment_CustomActorId(status, actorId, path, roleType, roleName));
         requestedRoles.add(buildRoleAssignment_CustomActorId(status, actorId, path, roleType, roleName));
@@ -165,7 +157,7 @@ public class TestDataBuilder {
             .build();
     }
 
-    public static RoleAssignment buildRoleAssignmentUpdated(Status status) throws IOException {
+    public static RoleAssignment buildRoleAssignmentUpdated(Status status) {
         ZonedDateTime timeStamp = ZonedDateTime.now(ZoneOffset.UTC);
         return RoleAssignment.builder()
             .id(UUID.fromString("9785c98c-78f2-418b-ab74-a892c3ccca9f"))
@@ -211,16 +203,7 @@ public class TestDataBuilder {
     public static ResponseEntity<RoleAssignmentResource> buildResourceRoleAssignmentResponse(
         Status roleStatus) throws Exception {
         return ResponseEntity.status(HttpStatus.OK)
-            .body(new RoleAssignmentResource(Arrays.asList(buildRoleAssignment(roleStatus)), ""));
-    }
-
-    public static ResponseEntity<RoleAssignmentResource> buildResourceRoleAssignmentResponse_Custom(
-        Status roleStatus, String actorId) throws Exception {
-        return ResponseEntity.status(HttpStatus.OK)
-            .body(new RoleAssignmentResource(Arrays.asList(buildRoleAssignment_CustomActorId(
-                roleStatus, actorId, "attributes.json", RoleType.ORGANISATION,
-                "senior-tribunal-caseworker"
-            )), actorId));
+            .body(new RoleAssignmentResource(List.of(buildRoleAssignment(roleStatus)), ""));
     }
 
     public static Collection<RoleAssignment> buildRequestedRoleCollection(Status status) throws IOException {
@@ -230,13 +213,7 @@ public class TestDataBuilder {
         return requestedRoles;
     }
 
-    public static Collection<RoleAssignment> buildRoleAssignmentCollection_Pact(Status status) throws IOException {
-        Collection<RoleAssignment> requestedRoles = new ArrayList<>();
-        requestedRoles.add(buildRoleAssignment(status));
-        return requestedRoles;
-    }
-
-    public static Collection<RoleAssignment> buildRequestedRoleCollection_Updated(Status status) throws IOException {
+    public static Collection<RoleAssignment> buildRequestedRoleCollection_Updated(Status status) {
         Collection<RoleAssignment> requestedRoles = new ArrayList<>();
         requestedRoles.add(buildRoleAssignmentUpdated(status));
         requestedRoles.add(buildRoleAssignmentUpdated(status));
@@ -269,7 +246,7 @@ public class TestDataBuilder {
         }
     }
 
-    public static List<RoleConfigRole> buildRolesFromFile() throws IOException {
+    public static List<RoleConfigRole> buildRolesFromFile() {
         return JacksonUtils.getConfiguredRoles();
     }
 
@@ -348,7 +325,7 @@ public class TestDataBuilder {
 
     }
 
-    public static ActorCacheEntity buildActorCacheEntity() throws IOException {
+    public static ActorCacheEntity buildActorCacheEntity() {
         JsonNode attributes = buildAttributesFromFile("attributes.json");
         return ActorCacheEntity.builder()
             .actorId("21334a2b-79ce-44eb-9168-2d49a744be9c")
@@ -357,38 +334,16 @@ public class TestDataBuilder {
             .build();
     }
 
-    public static ActorCache buildActorCache() throws IOException {
+    public static ActorCache buildActorCache() {
         return ActorCache.builder()
             .actorId("21334a2b-79ce-44eb-9168-2d49a744be9c")
             .etag(1)
             .build();
     }
 
-    private static RoleAssignmentEntity buildRoleAssignmentEntitySet() throws IOException {
-        return RoleAssignmentEntity.builder()
-            .actorId("21334a2b-79ce-44eb-9168-2d49a744be9c")
-            .actorIdType(ActorIdType.IDAM.name())
-            .roleType(RoleType.CASE.name())
-            .roleName("judge")
-            .classification(Classification.PUBLIC.name())
-            .grantType(GrantType.STANDARD.name())
-            .roleCategory(RoleCategory.JUDICIAL.name())
-            .readOnly(true)
-            .beginTime(now().plusDays(1))
-            .endTime(now().plusMonths(1))
-            .created(now())
-            .attributes(buildAttributesFromFile("attributes.json"))
-            .build();
-    }
-
-
-    @NotNull
-    public static ActorCache prepareActorCache(RoleAssignment roleAssignment) {
+    public static void prepareActorCache(RoleAssignment roleAssignment) {
         ActorCache actorCache = new ActorCache();
         actorCache.setActorId(roleAssignment.getActorId());
-        Set<RoleAssignmentEntity> roleAssignmentEntities = new HashSet<>();
-        roleAssignmentEntities.add(convertRoleAssignmentToEntity(roleAssignment));
-        return actorCache;
     }
 
 
@@ -437,7 +392,7 @@ public class TestDataBuilder {
             .build();
     }
 
-    public static UserInfo buildUserInfo(String uuid) throws IOException {
+    public static UserInfo buildUserInfo(String uuid) {
         List<String> list = new ArrayList<>();
         List<RoleConfigRole> roles = TestDataBuilder.buildRolesFromFile();
         for (RoleConfigRole role : roles) {
@@ -447,18 +402,13 @@ public class TestDataBuilder {
             .name("James").givenName("007").familyName("Bond").roles(list).build();
     }
 
-    public static Jwt buildJwt() {
-        return Jwt.withTokenValue("token_value").header("head", "head")
-            .claim("tokenName", ACCESS_TOKEN).build();
-    }
-
     public static Case buildCase() {
         return Case.builder()
             .id("1234").build();
     }
 
     public static AssignmentRequest createRoleAssignmentRequest(
-        boolean replaceExisting, boolean readOnly) throws IOException {
+        boolean replaceExisting, boolean readOnly) {
         return new AssignmentRequest(
             buildRequestForRoleAssignment(replaceExisting),
             buildRequestedRoles(readOnly)
@@ -474,13 +424,13 @@ public class TestDataBuilder {
             .build();
     }
 
-    public static Collection<RoleAssignment> buildRequestedRoles(boolean readOnly) throws IOException {
+    public static Collection<RoleAssignment> buildRequestedRoles(boolean readOnly) {
         Collection<RoleAssignment> requestedRoles = new ArrayList<>();
         requestedRoles.add(buildRoleAssignments(readOnly));
         return requestedRoles;
     }
 
-    public static RoleAssignment buildRoleAssignments(boolean readOnly) throws IOException {
+    public static RoleAssignment buildRoleAssignments(boolean readOnly) {
         ZonedDateTime timeStamp = ZonedDateTime.now(ZoneOffset.UTC);
         return RoleAssignment.builder()
             .actorId("123e4567-e89b-42d3-a456-556642445612")
@@ -499,10 +449,10 @@ public class TestDataBuilder {
             .build();
     }
 
-    public static RoleAssignment buildRoleAssignmentForConflict(RoleCategory roleCategory) throws IOException {
+    public static RoleAssignment buildRoleAssignmentForConflict(RoleCategory roleCategory) {
         ZonedDateTime timeStamp = ZonedDateTime.now(ZoneOffset.UTC);
         return RoleAssignment.builder()
-            .actorId("4772dc44-268f-4d0c-8f83-f0fb662aac84")
+            .actorId(ACTORID)
             .actorIdType(ActorIdType.IDAM)
             .roleType(RoleType.CASE)
             .roleName("conflict-of-interest")
@@ -527,16 +477,16 @@ public class TestDataBuilder {
         attributes.put("contractType", contractTypes);
 
         return QueryRequest.builder()
-            .actorId(Arrays.asList("123e4567-e89b-42d3-a456-556642445612"))
+            .actorId(List.of("123e4567-e89b-42d3-a456-556642445612"))
 
-            .roleType(Arrays.asList(RoleType.CASE.toString()))
-            .roleName(Arrays.asList("judge"))
-            .classification(Arrays.asList(Classification.PUBLIC.toString()))
-            .grantType(Arrays.asList(GrantType.SPECIFIC.toString()))
-            .roleCategory(Arrays.asList(RoleCategory.JUDICIAL.toString()))
+            .roleType(List.of(RoleType.CASE.toString()))
+            .roleName(List.of("judge"))
+            .classification(List.of(Classification.PUBLIC.toString()))
+            .grantType(List.of(GrantType.SPECIFIC.toString()))
+            .roleCategory(List.of(RoleCategory.JUDICIAL.toString()))
             .validAt(now())
             .attributes(attributes)
-            .authorisations(Arrays.asList("dev"))
+            .authorisations(List.of("dev"))
             .build();
 
 
@@ -563,7 +513,7 @@ public class TestDataBuilder {
         Map<String, JsonNode> attributes = new HashMap<>();
         attributes.put("jurisdiction", convertValueJsonNode(juris));
         return ExistingRoleAssignment.builder()
-            .actorId("4772dc44-268f-4d0c-8f83-f0fb662aac84")
+            .actorId(ACTORID)
             .roleType(RoleType.ORGANISATION)
             .roleCategory(roleCategory)
             .grantType(GrantType.STANDARD)
@@ -596,25 +546,25 @@ public class TestDataBuilder {
     }
 
     public static List<RoleAssignment> getRequestedOrgRole() {
-        return Arrays.asList(RoleAssignment.builder()
-                                 .id(UUID.fromString("9785c98c-78f2-418b-ab74-a892c3ccca9f"))
-                                 .actorId("4772dc44-268f-4d0c-8f83-f0fb662aac83")
-                                 .actorIdType(ActorIdType.IDAM)
-                                 .classification(Classification.PUBLIC)
-                                 .readOnly(true)
-                                 .status(CREATE_REQUESTED)
-                                 .attributes(new HashMap<String, JsonNode>())
-                                 .build());
+        return List.of(RoleAssignment.builder()
+                           .id(UUID.fromString("9785c98c-78f2-418b-ab74-a892c3ccca9f"))
+                           .actorId(ACTORID)
+                           .actorIdType(ActorIdType.IDAM)
+                           .classification(Classification.PUBLIC)
+                           .readOnly(true)
+                           .status(CREATE_REQUESTED)
+                           .attributes(new HashMap<>())
+                           .build());
     }
 
     public static AssignmentRequest.AssignmentRequestBuilder getAssignmentRequest() {
         return AssignmentRequest.builder().request(Request.builder()
                                                        .id(UUID.fromString("ab4e8c21-27a0-4abd-aed8-810fdce22adb"))
-                                                       .authenticatedUserId("4772dc44-268f-4d0c-8f83-f0fb662aac84")
+                                                       .authenticatedUserId(ACTORID)
                                                        .correlationId("38a90097-434e-47ee-8ea1-9ea2a267f51d")
-                                                       .assignerId("4772dc44-268f-4d0c-8f83-f0fb662aac84")
+                                                       .assignerId(ACTORID)
                                                        .requestType(RequestType.CREATE)
-                                                       .reference("4772dc44-268f-4d0c-8f83-f0fb662aac84")
+                                                       .reference(ACTORID)
                                                        .process(("p2"))
                                                        .replaceExisting(true)
                                                        .status(Status.CREATED)
@@ -639,19 +589,19 @@ public class TestDataBuilder {
         return AssignmentRequest.builder()
             .request(Request.builder()
                          .id(UUID.fromString("ab4e8c21-27a0-4abd-aed8-810fdce22adb"))
-                         .authenticatedUserId("4772dc44-268f-4d0c-8f83-f0fb662aac84")
+                         .authenticatedUserId(ACTORID)
                          .clientId(clientId)
                          .correlationId("38a90097-434e-47ee-8ea1-9ea2a267f51d")
-                         .assignerId("4772dc44-268f-4d0c-8f83-f0fb662aac84")
+                         .assignerId(ACTORID)
                          .requestType(RequestType.CREATE)
-                         .reference("1234567890123456/" + process + "/4772dc44-268f-4d0c-8f83-f0fb662aac84")
+                         .reference(attributes.get("caseId").asText() + "/" + roleName + "/" + ACTORID)
                          .process(process)
                          .replaceExisting(true)
                          .created(ZonedDateTime.now())
                          .build())
             .requestedRoles(Collections.singletonList(
                 RoleAssignment.builder()
-                    .actorId("4772dc44-268f-4d0c-8f83-f0fb662aac84")
+                    .actorId(ACTORID)
                     .status(status)
                     .roleType(RoleType.CASE)
                     .roleName(roleName)
@@ -678,7 +628,7 @@ public class TestDataBuilder {
             .classification(Classification.PUBLIC)
             .readOnly(true)
             .status(CREATE_REQUESTED)
-            .attributes(new HashMap<String, JsonNode>())
+            .attributes(new HashMap<>())
             .build();
     }
 
@@ -698,32 +648,11 @@ public class TestDataBuilder {
             .classification(Classification.PUBLIC)
             .readOnly(true)
             .status(status)
-            .attributes(new HashMap<String, JsonNode>())
+            .attributes(new HashMap<>())
             .build();
         ra.setAttribute(attributeKey, attributeVal);
         ra.setAttribute("jurisdiction", "IA");
         return ra;
-    }
-
-    public static RoleAssignment getRequestedCaseRole_2(RoleCategory roleCategory,
-                                                        String roleName,
-                                                        GrantType grantType,
-                                                        RoleType roleType,
-                                                        Classification classification,
-                                                        Status status) {
-        return RoleAssignment.builder()
-            .id(UUID.randomUUID())
-            .actorId(UUID.randomUUID().toString())
-            .actorIdType(ActorIdType.IDAM)
-            .roleCategory(roleCategory)
-            .roleType(roleType)
-            .roleName(roleName)
-            .grantType(grantType)
-            .classification(classification)
-            .readOnly(true)
-            .status(status)
-            .attributes(new HashMap<String, JsonNode>())
-            .build();
     }
 
 }
